# tradebill

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260220_2052_990624484f6f_create_users_and_business_profiles_.py  20260220_2100_a5b3c4d5e6f7_create_invoices_and_line_items.py
backend/app/: __init__.py  main.py  pdf_generator.py
backend/app/api/: auth.py  invoices.py  profile.py
backend/app/core/: auth.py  config.py
backend/app/models/: __init__.py  business_profile.py  invoice.py  line_item.py  user.py
backend/app/schemas/: __init__.py  business_profile.py  invoice.py  line_item.py  user.py
backend/app/services/: email.py  storage.py
backend/app/templates/: invoice_electrical.html  invoice_hvac.html  invoice_plumbing.html
backend/tests/: conftest.py  test_auth.py  test_invoices.py  test_main.py  test_profile.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: HomePage.tsx  InvoiceCreatePage.tsx  InvoiceDetailPage.tsx  InvoiceEditPage.tsx  InvoiceListPage.tsx  LoginPage.tsx  RegisterPage.tsx  SetupPage.tsx
frontend/src/stores/: authStore.ts  invoiceStore.ts
